# trinity-lite

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_zh.md  ROADMAP.md  SECURITY.md  glama.json  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: ARCHITECTURE.md  CAPABILITIES.md  MCP_SERVER_DESIGN.md  OPERATIONS.md  PRODUCT.md  REAL_AGENTS.md  SECURITY.md  TRINITY_LITE.md  WHY_TRINITY_LITE.md  WORKTREE_PARALLELISM.md  index.md
docs/architecture/: adr-001-agent-capability-routing.md
docs/recipes/: claude-code.md  codex.md  generic-cli.md  hermes-private-trinity.md
examples/: .env.example  agents.command.example.json  agents.example.json  agents.generic.example.json  routes.capabilities.example.json  routes.example.json
pipelines/: implement-only.yaml  implement-review.yaml
tests/: test_bus.py  test_cli.py  test_doctor.py  test_guard.py  test_mcp_server.py  test_orchestrator.py  test_pipeline.py  test_router.py  test_worker.py  test_worktree.py
trinity_lite/: __init__.py  adapters.py  bus.py  cli.py  config.py  doctor.py  guard.py  mcp_server.py  model_autodetect.py  model_pool_wizard.py  model_selector.py  orchestrator.py  paths.py  pipeline.py  router.py  validation.py  worker.py  worktree.py
