[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-lite"
version = "0.1.1"
description = "A minimal public multi-agent task bus with routing, workers, and safety checks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Yomiracle" }
]
keywords = ["ai-agent", "multi-agent", "agent-orchestration", "codex", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.scripts]
trinity-lite = "trinity_lite.cli:main"

[project.urls]
Homepage = "https://github.com/Yomiracle/trinity-lite"
Repository = "https://github.com/Yomiracle/trinity-lite"
Issues = "https://github.com/Yomiracle/trinity-lite/issues"

[tool.setuptools]
packages = ["trinity_lite"]
