[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "trinity-lite"
version = "0.2.3"
description = "The bus that lets your AI agents talk to each other."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Yomiracle" }
]
keywords = ["ai-agent", "multi-agent", "agent-orchestration", "codex", "claude-code"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
agent-skill = ["agent-skill-system>=1.0.6"]

[project.scripts]
trinity-lite = "trinity_lite.cli:main"

[project.urls]
Homepage = "https://github.com/Yomiracle/trinity-lite"
Repository = "https://github.com/Yomiracle/trinity-lite"
Issues = "https://github.com/Yomiracle/trinity-lite/issues"

[tool.setuptools]
packages = ["trinity_lite"]
